--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header role="banner" id="banner">
-            <h1> {{ site.title }}</h1>
+            <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
         </header>
         <main role="main" id="main" class="phb">
         {{ content }}
